# cg-final-csc471

./: .gitmodules  CMakeLists.txt  FindGfxLibs.cmake  README
resources/: anim_frag.glsl  anim_vert.glsl  part_frag.glsl  part_vert.glsl  simple_frag.glsl  simple_vert.glsl  tex_frag.glsl  tex_vert.glsl  water_frag.glsl  water_vert.glsl
src/: FBXModel.cpp  FBXModel.h  Particle.cpp  Particle.h  Shape.cpp  WindowManager.cpp  backup.txt  main.cpp  particleSys.cpp  particleSys.h
